syntax = "proto3";

package com.derongan.minecraft.looty.skill.proto;

import "skill.proto";

option java_multiple_files = true;


message ItemType {
    reserved 4;
    string name = 1;
    repeated string lore = 2;
    string material = 3;
    repeated Skill skill = 5;
    int32 model = 6;
}